--- a/src/App.scss
+++ b/src/App.scss
@@ -5,42 +5,7 @@
   padding: 30px;
 }
 
-a {
-  background-image: linear-gradient(
-    to right,
-    #55C57A,
-    #55C57A 50%,
-    #f7f7f7 50%
-  );
-  background-size: 200% 100%;
-  background-position: -100%;
-  display: inline-block;
-  padding: 5px 0;
-  position: relative;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 0.3s ease-in-out;
-}
 
-a:before{
-  content: '';
-  background: #55C57A;
-  display: block;
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 0;
-  height: 3px;
-  transition: all 0.3s ease-in-out;
-}
-
-a:hover {
- background-position: 0;
-}
-
-a:hover::before{
-  width: 100%;
-}
 
 .App-logo {
   height: 40vmin;
@@ -58,45 +23,248 @@ a:hover::before{
   width: 100%;
   background-color: #444444;
   color: #f7f7f7;
-  padding: 0 50px;
+  padding: 0 30px;
   display: flex;
   flex-direction: row;
   text-transform: uppercase;
 
-
-
-  .left-nav-links{
+  .header-links {
     display: flex;
-    align-self: center;
-    justify-content: space-between;
-    gap: 30px;
-    margin-right: auto;
-  }
+    flex-direction: row;
+    width: 100%;
 
-  .nav-logo{
-    align-self: center;
+    a {
+      background-image: linear-gradient(
+        to right,
+        #55C57A,
+        #55C57A 50%,
+        #f7f7f7 50%
+      );
+      background-size: 200% 100%;
+      background-position: -100%;
+      display: inline-block;
+      padding: 5px 0;
+      position: relative;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transition: all 0.3s ease-in-out;
+    }
+    
+    a:before{
+      content: '';
+      background: #55C57A;
+      display: block;
+      position: absolute;
+      bottom: -3px;
+      left: 0;
+      width: 0;
+      height: 3px;
+      transition: all 0.3s ease-in-out;
+    }
+    
+    a:hover {
+     background-position: 0;
+    }
+    
+    a:hover::before{
+      width: 100%;
+    }
 
-    .logo{
-      height: 35px;
+    .left-nav-links{
+      display: flex;
       align-self: center;
-      position: fixed; /* or absolute */
-      top: 50px;
-      left: 50%;
+      justify-content: space-between;
+      gap: 30px;
+      margin-right: auto;
+    }
+  
+    .nav-logo{
+      align-self: center;
+  
+      .logo{
+        height: 35px;
+        align-self: center;
+        position: fixed; /* or absolute */
+        top: 50px;
+        left: 50%;
+      }
+    }
+  
+    .right-nav-links{
+      display: flex;
+      align-self: center;
+      justify-content: space-between;
+      gap: 30px;
+      margin-left: auto;
     }
   }
 
-  .right-nav-links{
-    display: flex;
-    align-self: center;
-    justify-content: space-between;
-    gap: 30px;
-    margin-left: auto;
-  }
+
 }
 
 
+// @media (min-width:320px)  { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
+// @media (min-width:480px)  { /* smartphones, Android phones, landscape iPhone */ }
+@media (min-width:600px)  { 
+  #menuToggle.hamburger{
+    display: none; 
+  }
+ }
+ @media (max-width:600px)  { 
+  .header-links {
+    display: none !important;
+  }
+ }
+// @media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+// @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+// @media (min-width:1281px) { /* hi-res laptops and desktops */ }
+  
 
 
+#menuToggle
+{
+  display: block;
+  position: relative;
+  width: 100%;
+  top: 30px;
+  left: 0px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: #55C57A;
+}
 
 
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
 
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  margin-top: -60px ;
+  margin-left: -60px;
+  padding-top: 100px;
+  padding-right: 300px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-1000%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  padding-right: 60px;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
