--- a/src/allTours/allTours.scss
+++ b/src/allTours/allTours.scss
@@ -1,6 +1,8 @@
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 6rem 6rem;
+
+.card-container {
+  max-width: 120rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 7rem;
 }
