cards wrap and have max width

--- a/src/tourCard/tourCard.scss
+++ b/src/tourCard/tourCard.scss
@@ -15,6 +15,7 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  max-width: 350px;
 }
 .card__header {
   position: relative;
