--- a/src/allTours/allTours.scss
+++ b/src/allTours/allTours.scss
@@ -2,7 +2,8 @@
 .card-container {
   max-width: 120rem;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 7rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
 }
