--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,12 @@ body {
     }
   }
 }
+
+ @media (max-width:600px)  { 
+  .App{
+    padding: 0px !important;
+    .main{
+      padding: 30px 0 0 0 !important;
+    }
+  }
+ }
