cards tidy'd up

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ body {
     
     .main{
       background-color: #f7f7f7;
-      padding: 6rem 6rem;
+      padding: 80px 60px;
       flex: 1;
       position: relative;
     }
