--- a/src/tourCard/tourCard.scss
+++ b/src/tourCard/tourCard.scss
@@ -24,7 +24,7 @@
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0%, 100% 83%, 0% 98%);
   clip-path: polygon(0 0, 100% 0%, 100% 83%, 0% 98%);
-  height: 250px;
+  height: 225px;
 }
 .card__picture-overlay {
   position: absolute;
@@ -49,25 +49,27 @@
 .card__details {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-row-gap: 1.75rem;
+  grid-row-gap: 20px;
   grid-column-gap: 2rem;
-  padding: 2.5rem 3rem;
+  padding: 25px 35px;
 }
 .card__sub-heading {
-  font-size: 1.2rem;
+  margin: 0px;
+  text-align: start;
+  font-size: 14px;
   text-transform: uppercase;
   font-weight: 700;
   grid-column: 1 / -1;
 }
 .card__text {
+  text-align: start;
   grid-column: 1 / -1;
-  font-size: 1.5rem;
+  font-size: 17px;
   font-style: italic;
-  margin-top: -1rem;
-  margin-bottom: 0.75rem;
+  margin-top: -5px;
 }
 .card__data {
-  font-size: 1.3rem;
+  font-size: 14px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,26 +78,34 @@
   align-items: center;
 }
 .card__data svg {
-  margin-right: 0.7rem;
+  margin-right: 9px;
 }
 .card__icon {
-  height: 2rem;
-  width: 2rem;
+  height: 24px;
+  width: 24px;
   fill: #55c57a;
 }
 .card__footer {
+  text-align: start;
   background-color: #f7f7f7;
-  padding: 2.5rem 3rem;
+  padding: 25px 30px;
   border-top: 1px solid #f1f1f1;
-  font-size: 1.4rem;
+  font-size: 14px;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
-  margin-top: auto;
+  margin-top: 30px;
+
+  p{
+    margin: 0px;
+  }
 }
+
 .card__footer-value {
+  margin: 0px;
   font-weight: 700;
+  padding-right: 4px;
 }
 .card__footer-text {
   color: #999;
@@ -116,7 +126,7 @@
   line-height: 60px;
   text-align: right;
   position: absolute;
-  bottom: -30px;
+  bottom: -25px;
   right: 30px;
   width: 70%;
   z-index: 1;
@@ -146,3 +156,23 @@
     rgba(40, 180, 135, 0.85)
   );
 }
+
+.btn {
+  text-decoration: none;
+}
+.btn--green {
+  background-color: #55c57a;
+  color: #fff;
+}
+.btn--green::after {
+  background-color: #55c57a;
+}
+
+.btn--small {
+  padding: 13px 30px !important;
+  font-size: 14px !important;
+  border-radius: 1000px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
