--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,13 @@ body {
   }
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 9999s ease-in-out 0s;
+}
+
  @media (max-width:600px)  { 
   .App{
     padding: 0px !important;
