--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@ input:-webkit-autofill:active {
   display: flex;
 }
 .user-view__menu {
+  max-width: 300px;
   display: flex;
   flex-direction: column;
   -webkit-box-flex: 32rem;
@@ -63,13 +64,13 @@ input:-webkit-autofill:active {
     to(#28b487)
   );
   background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
-  padding: 4rem 0;
+  padding: 65px 0;
 }
 .user-view__content {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  padding: 7rem 0;
+  padding: 70px 0;
 }
 .user-view__form-container {
   max-width: 68rem;
@@ -81,7 +82,7 @@ input:-webkit-autofill:active {
   list-style: none;
 }
 .side-nav li {
-  margin: 1rem 0;
+  margin: 12px 0;
   border-left: 0 solid #fff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -96,7 +97,7 @@ input:-webkit-autofill:active {
 }
 .side-nav a:link,
 .side-nav a:visited {
-  padding: 1rem 4rem;
+  padding: .5rem 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -151,7 +152,7 @@ input:-webkit-autofill:active {
   margin-bottom: 0.75rem;
 }
 .form__group:not(:last-child) {
-  margin-bottom: 2.5rem;
+  margin-bottom: 30px;
 }
 
 .form__input {
@@ -209,4 +210,77 @@ input:-webkit-autofill:active {
   box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
   padding: 50px 70px;
   border-radius: 5px;
+}
+
+.admin-nav {
+  margin-top: 5.5rem;
+}
+.admin-nav__heading {
+  margin: 0 5rem 1.5rem 3rem;
+  padding-bottom: 3px;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #f2f2f2;
+  border-bottom: 1px solid currentColor;
+}
+
+.form__user-photo {
+  height: 7.5rem;
+  width: 7.5rem;
+  border-radius: 50%;
+  margin-right: 2rem;
+}
+
+.form__upload {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.form__upload:focus + label {
+  outline: 3px solid #55c57a;
+  outline-offset: 3px;
+}
+
+.form__upload + label {
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+.form__upload + label:hover {
+  background-color: #55c57a;
+  color: #fff;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+}
+
+.form__photo-upload {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 1.6rem;
+}
+
+.right {
+  text-align: right !important;
+}
+
+.line {
+  margin: 6rem 0;
+  width: 100%;
+  height: 1px;
+  background-color: #e0e0e0;
 }
